--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ body {
     font-weight: 700;
     font-size: 20px;
     text-decoration: none;
+    color: black;
 }
 
 .article__card-title:hover,
