--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ body {
 .wrapper {
     max-width: 1112px;
     margin: 0 auto;
-    padding: 0 15px;
 }
 
 .header__wrapper {
@@ -234,6 +233,9 @@ body {
 }
 
 @media screen and (max-width: 1110px) {
+    .wrapper {
+        padding: 0 20px;
+    }
     .intro__cards {
         display: block;
     }
